--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
     "daisyui": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
+    "lightgallery": "^2.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
