--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "lightgallery": "^2.9.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.3"
   },
   "devDependencies": {
